--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,14 @@ lerna-debug.log*
 
 node_modules
 .DS_Store
+dist
 dist-ssr
+src/
+public/
+vite.config.js
+tailwind.config.js
+postcss.config.js
+jsconfig.json
 coverage
 *.local
 
