--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.46.0",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5"
   },
