--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.4.17",
     "terser": "^5.46.0",
     "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-plugin-vue-devtools": "^8.0.5"
   },
   "engines": {
